--- a/easyGALib/easyGALib/easyGALib.csproj
+++ b/easyGALib/easyGALib/easyGALib.csproj
@@ -52,9 +52,10 @@
     <Compile Include="Chromosomes\DoubleChromosome.cs" />
     <Compile Include="Chromosomes\IntChromosome.cs" />
     <Compile Include="Chromosomes\StringChromosome.cs" />
+    <Compile Include="Helpers\ExtensionMethods.cs" />
     <Compile Include="Interfaces\Algorithm\IGAResult.cs" />
     <Compile Include="Chromosomes\Chromosome.cs" />
-    <Compile Include="Chromosomes\ChromosomeType.cs" />
+    <Compile Include="Types\ChromosomeType.cs" />
     <Compile Include="Constants\Exceptions.cs" />
     <Compile Include="Constants\Settings.cs" />
     <Compile Include="Factories\GAFactory.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Interfaces\IGeneticAlgorithmInput.cs" />
     <Compile Include="Interfaces\IGAParameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\CrossoverType.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
